# siou-chatbot

./: .gitattributes  .gitignore  DEPLOYMENT.md  README.md  TEST_QUESTIONS.md  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/ai/: __init__.py
backend/app/api/: deps.py  routes.py
backend/app/core/: config.py  database.py
backend/app/models/: document.py
backend/app/schemas/: chat.py  database.py  document.py
backend/app/services/: chunking_service.py  citation_service.py  database_service.py  document_loader.py  embedding_service.py  indexing_service.py  llm_service.py  pdf_parser.py  prompt_service.py  rag_service.py  retrieval_service.py  vector_store_service.py
backend/app/utils/: files.py
backend/documents/: ATTRIBUTIONS ET FONCTIONNEMENT.docx  Données à utiliser (1).docx
backend/scripts/: create_sample_pdfs.py  index_documents.py  ingest_data_folder.py  init_database.py
backend/tests/: conftest.py  test_api.py  test_chunking_service.py  test_embedding_service.py  test_indexing_and_retrieval.py  test_rag_service.py
backend/vector_store/accord-2022-324-937adf179251/: chunks.json  index.faiss  metadata.json
backend/vector_store/arrete-aof-directions-techniques-mnd-cbf3e2767b08/: chunks.json  index.faiss  metadata.json
backend/vector_store/attributions-et-fonctionnement-9df9e3c2a961/: chunks.json  index.faiss  metadata.json
backend/vector_store/decret-2018-552-9532c051e40c/: chunks.json  index.faiss  metadata.json
backend/vector_store/decret-2021-308-2-a0645eea7a65/: chunks.json  index.faiss  (+1 more)
(+32 files in other folders)
