[project]
name = "siou-backend"
version = "0.1.0"
description = "Lecteur documentaire intelligent local avec FastAPI et RAG."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "pypdf>=4.2.0",
  "numpy>=1.26.4",
  "faiss-cpu>=1.8.0",
  "httpx>=0.27.0",
  "openai>=1.35.0",
  "python-multipart>=0.0.9",
  "psycopg[binary]>=3.2.0",
  "python-docx>=1.1.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "reportlab>=4.2.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
